Fix alignement of zoom button.

--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -145,6 +145,7 @@ input[type=range]::-webkit-slider-thumb {
     border-radius: 50%;
     background: $color-alpha;
     margin-top: -4px;
+    margin-left: -4px;
 }
 
 input[type=range]:focus {
